--- a/FN.UserService/appsettings.json
+++ b/FN.UserService/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Redis": "redis-12948.c334.asia-southeast2-1.gce.redns.redis-cloud.com:12948,password=Qyj4H7fsDNXMJwjNTWl0vkz1WLiL426e,abortConnect=false",
+    "MySQL": "Server=localhost;Port=3306;Database=defaultdb;User=root;Password=katsu2212;Allow User Variables=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
