--- a/FN.UserService/FN.UserService.csproj
+++ b/FN.UserService/FN.UserService.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FN.Extensions\FN.Extensions.csproj" />
+  </ItemGroup>
+
 </Project>
