Add API result classes and user service interface; refactor email service and update project references

--- a/FN.APIGateway/appsettings.json
+++ b/FN.APIGateway/appsettings.json
@@ -1,9 +1,34 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ReverseProxy": {
+    "Routes": {
+      "userRoute": {
+        "ClusterId": "userCluster",
+        "Match": {
+          "Path": "api/user/{**catch-all}"
+        }
+      },
+      "emailRoute": {
+        "ClusterId": "emailCluster",
+        "Match": {
+          "Path": "api/email/{**catch-all}"
+        }
+      }
     }
   },
-  "AllowedHosts": "*"
+  "Clusters": {
+    "userCluster": {
+      "Destinations": {
+        "userService": {
+          "Address": "http://localhost:5001/"
+        }
+      }
+    },
+    "emailCluster": {
+      "Destinations": {
+        "emailService": {
+          "Address": "http://localhost:5002/"
+        }
+      }
+    }
+  }
 }
