--- a/FN.EmailService/appsettings.json
+++ b/FN.EmailService/appsettings.json
@@ -1,4 +1,22 @@
 {
+  "ConnectionStrings": {
+    "Redis": "redis-12948.c334.asia-southeast2-1.gce.redns.redis-cloud.com:12948,password=Qyj4H7fsDNXMJwjNTWl0vkz1WLiL426a,abortConnect=false"
+  },
+  "MailJet": {
+    "ApiKey": "d204336a6f251c6c372bc5a14f7e3839",
+    "SecretKey": "e0b10b282e0eeb1ee3232bf790f33d7a",
+    "SenderEmail": "no-reply@mrkatsu.io.vn",
+    "SenderName": "MrKatsu Website"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "MrKatsu Web",
+    "SenderEmail": "mrkatsu15@gmail.com",
+    "UserName": "mrkatsu15@gmail.com",
+    "Password": "rhkaderygvkgojho ",
+    "UseSsl": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
