--- a/FN.APIGateway/FN.APIGateway.csproj
+++ b/FN.APIGateway/FN.APIGateway.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ocelot" Version="23.4.3" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FN.Extensions\FN.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
