--- a/FN.Extensions/FN.Extensions.csproj
+++ b/FN.Extensions/FN.Extensions.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.2.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0" />
+		<ProjectReference Include="..\FN.Application\FN.Application.csproj" />
 		<ProjectReference Include="..\FN.DataAccess\FN.DataAccess.csproj" />
 		<ProjectReference Include="..\FN.Utilities\FN.Utilities.csproj" />
 	</ItemGroup>
