--- a/FN.Utilities/FN.Utilities.csproj
+++ b/FN.Utilities/FN.Utilities.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="UAParser" Version="3.1.47" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FN.ViewModel\FN.ViewModel.csproj" />
+  </ItemGroup>
+
 </Project>
