Thêm Refresh Token, update Email service, điều chỉnh pub/sub của Redis

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,6 @@ FodyWeavers.xsd
 Migrations/*.designer.cs
 appsettings.json
 appsettings.*.json
+*/appsettings.json
+FN.EmailService/appsettings.json
+FN.EmailService/appsettings.json
