--- a/.gitignore
+++ b/.gitignore
@@ -404,5 +404,5 @@ Migrations/*.designer.cs
 appsettings.json
 appsettings.*.json
 */appsettings.json
-FN.EmailService/appsettings.json
+*/ocelot.json
 FN.EmailService/appsettings.json
