--- a/.gitignore
+++ b/.gitignore
@@ -405,4 +405,6 @@ appsettings.json
 appsettings.*.json
 */appsettings.json
 */ocelot.json
+ocelot.*.json
+ocelot.json
 FN.EmailService/appsettings.json
