--- a/Server/FN.ProductService/FN.ProductService.csproj
+++ b/Server/FN.ProductService/FN.ProductService.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FN.Extensions\FN.Extensions.csproj" />
+  </ItemGroup>
+
 </Project>
