--- a/Server/FN.ProductService/Properties/launchSettings.json
+++ b/Server/FN.ProductService/Properties/launchSettings.json
@@ -23,8 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7293;http://localhost:5195",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
