--- a/Server/FN.Utilities/FN.Utilities.csproj
+++ b/Server/FN.Utilities/FN.Utilities.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="3.1.0" />
     <PackageReference Include="UAParser" Version="3.1.47" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FN.ViewModel\FN.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
