--- a/Server/FN.ViewModel/FN.ViewModel.csproj
+++ b/Server/FN.ViewModel/FN.ViewModel.csproj
@@ -15,4 +15,8 @@
 	  <ProjectReference Include="..\FN.DataAccess\FN.DataAccess.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Catalog\Blogs\" />
+	</ItemGroup>
+
 </Project>
