--- a/Client/angular.json
+++ b/Client/angular.json
@@ -52,10 +52,12 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/swiper/swiper-bundle.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@fancyapps/ui/dist/fancybox/fancybox.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/@fancyapps/ui/dist/fancybox/fancybox.umd.js"
             ]
           },
           "configurations": {
@@ -118,10 +120,12 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/swiper/swiper-bundle.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@fancyapps/ui/dist/fancybox/fancybox.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/@fancyapps/ui/dist/fancybox/fancybox.umd.js"
             ]
           }
         }
